--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
   "dependencies": {
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "humps": "^2.0.1",
+    "isomorphic-fetch": "^2.2.1",
+    "js-base64": "^2.5.1",
+    "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
+    "qs": "^6.9.0",
     "react": "^16.9.0",
     "react-component-queries": "^2.3.0",
     "react-datepicker": "^2.9.6",
@@ -29,11 +36,7 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.1",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.4.0",
-    "axios": "^0.19.0",
-    "humps": "^2.0.1",
-    "isomorphic-fetch": "^2.2.1",
-    "qs": "^6.9.0"
+    "styled-components": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
