--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react-component-queries": "^2.3.0",
     "react-datepicker": "^2.9.6",
     "react-dom": "^16.9.0",
+    "react-full-screen": "^0.2.4",
     "react-icons": "^3.7.0",
     "react-infinite-calendar": "^2.3.1",
+    "react-mobile-datepicker": "^4.0.2",
     "react-redux": "^7.1.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
