--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "core-js": "^3.3.2",
     "humps": "^2.0.1",
+    "intl": "^1.2.5",
     "isomorphic-fetch": "^2.2.1",
     "js-base64": "^2.5.1",
     "jwt-decode": "^2.2.0",
@@ -17,6 +19,7 @@
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "qs": "^6.9.0",
+    "raf": "^3.4.1",
     "react": "^16.9.0",
     "react-component-queries": "^2.3.0",
     "react-datepicker": "^2.9.6",
