--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "connect-history-api-fallback": "^1.6.0",
-    "copy-webpack-plugin": "^5.0.4",
     "core-js": "^3.3.2",
     "debug": "^4.1.1",
     "express": "^4.17.1",
@@ -37,6 +36,7 @@
     "react-icons": "^3.7.0",
     "react-infinite-calendar": "^2.3.1",
     "react-mobile-datepicker": "^4.0.2",
+    "react-portal": "^4.2.0",
     "react-redux": "^7.1.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
@@ -60,8 +60,9 @@
     "webpack-hot-middleware": "^2.25.0"
   },
   "scripts": {
-    "start":"node server.js",
-    "dev": "NODE_ENV=development webpack-dev-server --content-base dist --hot",
+    "start": "node server.js",
+    "dev": "NODE_ENV=development webpack-dev-server ",
+    "buildDev": "rm -rf dist && webpack --mode development --config webpack.config.js && webpack --mode development --config webpack.config.js",
     "build": "cross-env NODE_ENV=production webpack"
   },
   "eslintConfig": {
@@ -86,6 +87,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-webpack-plugin": "^0.1.1",
+    "copy-webpack-plugin": "^5.0.4",
     "extract-text-webpack-plugin": "^4.0.0-beta.0"
   }
 }
